Colores del menu
Se agrega clase para el estilo del menu

--- a/CRAU/CRAU.vbproj
+++ b/CRAU/CRAU.vbproj
@@ -200,6 +200,7 @@
     </Compile>
     <Compile Include="Utilerias\Metodos.vb" />
     <Compile Include="Utilerias\SoloNumeros.vb" />
+    <Compile Include="Utilerias\Stylo.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Aplicacion\Login.resx">
