--- a/CRAU/CRAU.vbproj
+++ b/CRAU/CRAU.vbproj
@@ -12,7 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -45,7 +45,7 @@
     <OptionStrict>Off</OptionStrict>
   </PropertyGroup>
   <PropertyGroup>
-    <OptionInfer>On</OptionInfer>
+    <OptionInfer>Off</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FontAwesome.Sharp, Version=5.15.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -94,6 +94,30 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aplicacion\Clientes\ClienteCRUB.Designer.vb">
+      <DependentUpon>ClienteCRUB.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion\Clientes\ClienteCRUB.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Aplicacion\Clientes\Clientes.Designer.vb">
+      <DependentUpon>Clientes.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion\Clientes\Clientes.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Aplicacion\Clientes\ContactoCRUB.Designer.vb">
+      <DependentUpon>ContactoCRUB.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion\Clientes\ContactoCRUB.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Aplicacion\Clientes\CtipoCRUB.Designer.vb">
+      <DependentUpon>CtipoCRUB.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion\Clientes\CtipoCRUB.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Aplicacion\Menu.Designer.vb">
       <DependentUpon>Menu.vb</DependentUpon>
     </Compile>
@@ -134,6 +158,24 @@
       <DependentUpon>Productos.vb</DependentUpon>
     </Compile>
     <Compile Include="Aplicacion\Productos\Productos.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Aplicacion\Proveedores\ProveedorCRUB.Designer.vb">
+      <DependentUpon>ProveedorCRUB.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion\Proveedores\ProveedorCRUB.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Aplicacion\Proveedores\Proveedores.Designer.vb">
+      <DependentUpon>Proveedores.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion\Proveedores\Proveedores.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Aplicacion\Proveedores\PtipoCRUB.Designer.vb">
+      <DependentUpon>PtipoCRUB.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion\Proveedores\PtipoCRUB.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Aplicacion\Usuarios\DepartamentosCRUB.Designer.vb">
@@ -210,6 +252,10 @@
       <DependentUpon>Login.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="DAO\Clientes\DAOCliente.vb" />
+    <Compile Include="DAO\Clientes\DAOCtipo.vb" />
+    <Compile Include="DAO\Proveedores\DAOProveedor.vb" />
+    <Compile Include="DAO\Proveedores\DAOPtipo.vb" />
     <Compile Include="DAO\Usuarios\DAODepartamento.vb" />
     <Compile Include="DAO\Usuarios\DAOEmpleado.vb" />
     <Compile Include="DAO\Usuarios\DAOUsuario.vb" />
@@ -225,12 +271,16 @@
     <Compile Include="DAO\Vehiculos\DAOVtipo.vb" />
     <Compile Include="Interfaces\GripMethod.vb" />
     <Compile Include="Interfaces\OpSql.vb" />
+    <Compile Include="Modelos\Clientes\Cliente.vb" />
+    <Compile Include="Modelos\Clientes\Ctipo.vb" />
     <Compile Include="Modelos\Productos\Categoria.vb" />
     <Compile Include="Modelos\Productos\Familia.vb" />
     <Compile Include="Modelos\Productos\Marca.vb" />
     <Compile Include="Modelos\Productos\Medida.vb" />
     <Compile Include="Modelos\Productos\Producto.vb" />
     <Compile Include="Modelos\Productos\Stock.vb" />
+    <Compile Include="Modelos\Proveedores\Ptipo.vb" />
+    <Compile Include="Modelos\Proveedores\Proveedor.vb" />
     <Compile Include="Modelos\Usuarios\Departamento.vb" />
     <Compile Include="Modelos\Usuarios\Empleado.vb" />
     <Compile Include="Modelos\Usuarios\Puesto.vb" />
@@ -262,6 +312,18 @@
     <Compile Include="Utilerias\Stylo.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Aplicacion\Clientes\ClienteCRUB.resx">
+      <DependentUpon>ClienteCRUB.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Aplicacion\Clientes\Clientes.resx">
+      <DependentUpon>Clientes.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Aplicacion\Clientes\ContactoCRUB.resx">
+      <DependentUpon>ContactoCRUB.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Aplicacion\Clientes\CtipoCRUB.resx">
+      <DependentUpon>CtipoCRUB.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Aplicacion\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
     </EmbeddedResource>
@@ -285,6 +347,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Aplicacion\Productos\Productos.resx">
       <DependentUpon>Productos.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Aplicacion\Proveedores\ProveedorCRUB.resx">
+      <DependentUpon>ProveedorCRUB.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Aplicacion\Proveedores\Proveedores.resx">
+      <DependentUpon>Proveedores.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Aplicacion\Proveedores\PtipoCRUB.resx">
+      <DependentUpon>PtipoCRUB.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Aplicacion\Usuarios\DepartamentosCRUB.resx">
       <DependentUpon>DepartamentosCRUB.vb</DependentUpon>
@@ -318,6 +389,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Aplicacion\Vehiculos\VtipoCRUB.resx">
       <DependentUpon>VtipoCRUB.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DAO\Proveedores\DAOPtipo.resx">
+      <DependentUpon>DAOPtipo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modelos\Proveedores\Ptipo.resx">
+      <DependentUpon>Ptipo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
