--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,4 @@ CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
 CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
 CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
 CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
+CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
