Catalogo, vehiculo, cliente, proveedor actualizado

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,7 @@ CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
 CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
 CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
 CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
+CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
+CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
+CRAU/obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
+*.dll
